kubernetes-deployments/plex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: plex
  type: ClusterIP
