kubernetes-deployments/plex/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: plex.jsnouff.net
    http:
      paths:
      - backend:
          service:
            name: plex-tcp
            port:
              name: pms-web
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - plex.jsnouff.net
      secretName: tls-secret
